--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,85 +2,21 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "(gdb) Bash en Windows: iniciar",
+      "name": "C++ Launch (GDB)",
       "type": "cppdbg",
       "request": "launch",
-      "program": "Escriba el nombre del programa; por ejemplo, ${workspaceFolder}/a.exe.",
+      "program": "${workspaceFolder}\\a.exe",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "${fileDirname}",
+      "cwd": "${workspaceFolder}",
       "environment": [],
       "externalConsole": false,
-      "pipeTransport": {
-        "debuggerPath": "/usr/bin/gdb",
-        "pipeProgram": "${env:windir}\\system32\\bash.exe",
-        "pipeArgs": [
-          "-c"
-        ],
-        "pipeCwd": ""
-      },
-      "setupCommands": [
-        {
-          "description": "Habilitar la impresión con sangría para gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        },
-        {
-          "description": "Establecer tipo de desensamblado en Intel",
-          "text": "-gdb-set disassembly-flavor intel",
-          "ignoreFailures": true
-        }
-      ]
-    },
-    {
-      "name": "(gdb) Bash en Windows: asociar",
-      "type": "cppdbg",
-      "request": "attach",
-      "program": "Escriba el nombre del programa; por ejemplo, ${workspaceFolder}/a.exe.",
-      "processId": "${command:pickRemoteProcess}",
-      "pipeTransport": {
-        "debuggerPath": "/usr/bin/gdb",
-        "pipeProgram": "${env:windir}\\system32\\bash.exe",
-        "pipeArgs": [
-          "-c"
-        ],
-        "pipeCwd": ""
-      },
-      "setupCommands": [
-        {
-          "description": "Habilitar la impresión con sangría para gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        },
-        {
-          "description": "Establecer tipo de desensamblado en Intel",
-          "text": "-gdb-set disassembly-flavor intel",
-          "ignoreFailures": true
-        }
-      ]
-    },
-    {
-      "name": "(gdb) Asociación de canalización",
-      "type": "cppdbg",
-      "request": "attach",
-      "program": "Escriba el nombre del programa; por ejemplo, ${workspaceFolder}/a.exe.",
-      "processId": "${command:pickRemoteProcess}",
-      "pipeTransport": {
-        "debuggerPath": "/usr/bin/gdb",
-        "pipeProgram": "<Ruta de acceso completa al programa de canalización, como plink.exe.>",
-        "pipeArgs": [],
-        "pipeCwd": ""
-      },
       "MIMode": "gdb",
+      "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
       "setupCommands": [
         {
-          "description": "Habilitar la impresión con sangría para gdb",
+          "description": "Enable pretty-printing for gdb",
           "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        },
-        {
-          "description": "Establecer tipo de desensamblado en Intel",
-          "text": "-gdb-set disassembly-flavor intel",
           "ignoreFailures": true
         }
       ]
@@ -92,10 +28,10 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "d:/Algoritmos-Paralelos/laboratorio4",
-      "program": "d:/Algoritmos-Paralelos/laboratorio4/build/Debug/outDebug",
+      "cwd": "c:/Users/LOVIT/Documents/GitHub/Algoritmos-Paralelos/trabajogr",
+      "program": "c:\\Users\\LOVIT\\Documents\\GitHub\\Algoritmos-Paralelos\\trabajogr\\build\\Debug\\outDebug",
       "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
+      "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe",
       "setupCommands": [
         {
           "description": "Enable pretty-printing for gdb",
